--- a/notebooks/1_Introduction/basic_operations.ipynb
+++ b/notebooks/1_Introduction/basic_operations.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -59,9 +59,9 @@
    "source": [
     "# Launch the default graph.\n",
     "with tf.Session() as sess:\n",
-    "    print \"a=2, b=3\"\n",
-    "    print \"Addition with constants: %i\" % sess.run(a+b)\n",
-    "    print \"Multiplication with constants: %i\" % sess.run(a*b)"
+    "    print (\"a=2, b=3\")\n",
+    "    print (\"Addition with constants: %i\" % sess.run(a+b))\n",
+    "    print (\"Multiplication with constants: %i\" % sess.run(a*b))"
    ]
   },
   {
@@ -113,8 +113,8 @@
     "# Launch the default graph.\n",
     "with tf.Session() as sess:\n",
     "    # Run every operation with variable input\n",
-    "    print \"Addition with variables: %i\" % sess.run(add, feed_dict={a: 2, b: 3})\n",
-    "    print \"Multiplication with variables: %i\" % sess.run(mul, feed_dict={a: 2, b: 3})"
+    "    print (\"Addition with variables: %i\" % sess.run(add, feed_dict={a: 2, b: 3}))\n",
+    "    print (\"Multiplication with variables: %i\" % sess.run(mul, feed_dict={a: 2, b: 3}))"
    ]
   },
   {
@@ -192,27 +192,27 @@
     "# The output of the op is returned in 'result' as a numpy `ndarray` object.\n",
     "with tf.Session() as sess:\n",
     "    result = sess.run(product)\n",
-    "    print result"
+    "    print (result)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "IPython (Python 2.7)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.8"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
